# schedule_updates_checker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py
bot/handlers/: scheduler.py
bot/schedule/: get_docs.py
